--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,6 +3,12 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
+  margin-bottom: 15px;
+}
+.screen-header span {
+  font-size: 25px;
+  margin-left: 20px;
+  font-weight: bold;
 }
 
 .screen-header__title {
@@ -12,4 +18,19 @@
 
 .screen-header__icons span {
   margin-left: 15px;
+}
+
+.gear__dot {
+  display: flex;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: tomato;
+  position: absolute;
+  left: 8px;
+  bottom: 20px;
+}
+
+.screen-header__icons span:nth-child(2) {
+  position: relative;
 }
