--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -43,5 +43,18 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-component__column:last-child .badge {
+  display: flex;
+  justify-content: center;
+}
+
+.user-component__time {
+  display: block;
+  margin-bottom: 8px;
 }
